[package]
name = "usd_loader"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version ="0.16.1", features = ["dynamic_linking"]}
bevy_panorbit_camera = "0.27.1"
downcast-rs = "2.0.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
openusd-rs = { path = "C:/Users/Nicol/dev/rust/usd/openusd-rs" }

