[package]
name = "bevy_usd_lib"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[lib]
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"]}
glam = "0.30.5"
openusd_rs = { package = "openusd-rs", path = "../openusd-rs" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bevy_panorbit_camera = "0.33.0"

